--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists the contributors to this Project
 # This Project is an ALX Project that involves two Partners and they are;
 1. Chinonso Paschal Okongwu <paschal4jesus@gmail.com>
-2. Damilola Aminah Moliki-Salman <
+2. Damilola Aminah Moliki-Salman <salmanameenat@gmail.com>
